--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Fitmate</string>
-    <string name="list_button_string">Lista de Sesiones</string>
+    <string name="app_name" translatable="false">Fitmate</string>
+    <string name="list_button_string">List of Sessions</string>
 </resources>
